# McPOS

./: .cursor_input.txt  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_QUICK_START.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  PROJECT_CLEANUP_SUMMARY.md  QUICK_START_CLI.md  RBR_ARCHIVE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  compare_by_first_10_seconds.py  compare_duplicates_by_duration.py  mcpos.sh  mcpos_cli.py  prepare_manual_comparison.py  pyproject.toml  remove_duplicates_from_suno.py  requirements.txt
#/: pyvenv.cfg
.github/workflows/: t2r.yml
.venv311/: pyvenv.cfg
Kat Records.app/Contents/: Info.plist
archive/legacy/: README.md
audit/: ws_probe.py  ws_stats.json
audit/golden_path_v0.9-rc0/: README.md  backend_full_log.txt  backend_log_snapshot.txt  desktop_app_checklist.md  health_check_final.json  metrics_system.json  metrics_system_final.json  metrics_ws_health_final.json  plan_result.json  run_result.json  scan_result.json  verification_report.md  verification_summary.json  ws_stats.json
automation/: README.md
blueprints/: README.md
channels/: README.md
channels/kat/: channel_profile.json  plugin.py  schedule_master.json
channels/rbr/: plugin.py
channels/sg/: plugin.py
config/: .env.example  config.example.yaml  library_settings.yml  settings.yml  workflow.yml
config/google/: README.md
data/: 20251102-3724c5fe.json  asset_usage_index.json  metrics.json  workflow_status.json
data/google_sheet/: Kat Record Lo-Fi Radio Songs Database - tracklist.tsv
deploy/: README.md  docker-compose.yml
desktop/tauri/: package.json
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/src/: main.rs
docs/: 01_SYSTEM_OVERVIEW.md  02_WORKFLOW_AND_AUTOMATION.md  03_DEVELOPMENT_GUIDE.md  04_DEPLOYMENT_AND_ROADMAP.md  ADD_ICON.md  APP_LAUNCHER.md  ARCHITECTURE.md  ARCHITECTURE_UPLOAD_V2.md  ARCHITECTURE_VERIFY_V2.md  ASSET_GENERATION_FUNCTIONS_INVENTORY.md  ATLAS_CONSOLE_DEBUG_GUIDE.md  AUDIT_EXECUTION_PLAN.md  AUDIT_README.md  AUDIT_SPRINT6.md  AgentCollaborationRulesV1.md  BACKEND_STARTUP_OPTIMIZATION.md  BATCH_PRODUCTION_IMPLEMENTATION_SUMMARY.md  BATCH_PRODUCTION_UI_DESIGN.md  BATCH_UPLOAD_MODULES_COMPARISON.md  BUILD_INSTRUCTIONS.md  CHANNEL_PRODUCTION_SPEC.md  CLEANUP_EXECUTION_GUIDE.md  CLEANUP_EXECUTION_REPORT.md  CODE_DUPLICATION_ANALYSIS.md  CODE_REVIEW_REPORT.md  COMMAND_LINE_WORKFLOW.md  COMPLETE_STRATEGY_PLAN.md  CONSOLIDATION_PLAN.md  CORE_MODULES_ANALYSIS.md  COVER_GENERATION_MODULES_COMPARISON.md  DEBT_REGISTER.md  DECEMBER_GENERATION_CALL_CHAIN.md  DECEMBER_GENERATION_FUNCTIONS_USED.md  DEVELOPMENT.md  DEVELOPMENT_STANDARDS.md  DOCS_CLEANUP_SUMMARY.md  DOCS_TOC.md  DOCUMENTATION_UPDATE_LOG.md  ENTROPY_REDUCTION_SUMMARY.md  EPISODE_TITLE_GENERATION_MODULES.md  (+94 more)
docs/archive/: ANIMATION_RESOURCES_INTEGRATION.md  API完整指南.md  ASR_RESIDUAL_SCAN_REPORT.md  ASSET_GENERATION_FLOW_ANALYSIS.md  ASSET_MONITORING_ANALYSIS.md  ASSET_STATUS_STRICT_CHECKS_IMPLEMENTED.md  ASYNC_MIGRATION_TODO.md  AUDIO_PROGRESS_AND_MONITORING_IMPLEMENTED.md  AUDIO_STATUS_DISPLAY_ANALYSIS.md  BLOCKING_FIXES_IMPLEMENTED.md  BREADTH_FIRST_GENERATE_FIX.md  CHANGELOG.md  CLEANUP_EXECUTION_SUMMARY.md  CLEANUP_FINAL_REPORT.md  CLEANUP_PLAN_2025.md  CLEANUP_PLAN_FULL_2025.md  COMPLETION_DETECTION_FIXES_APPLIED.md  COMPLETION_DETECTION_ISSUES.md  CONCURRENCY_EVALUATION.md  CONCURRENCY_TIMING_SOLUTIONS.md  CREATE_RENDER_FLAG_API.md  ChatGPT分析开发日志Prompt.md  DEBUG_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  DRAWER_FIXES.md  DURATION_FIX_COMPARISON.md  EPISODE_20251112_ASSET_ANALYSIS.md  EPISODE_20251112_DESCRIPTION_FIX.md  EPISODE_20251112_DESCRIPTION_ISSUE.md  EPISODE_20251113_20251114_ISSUES.md  EPISODE_20251113_TIMELINE_CSV_FIX.md  EPISODE_20251113_TIMELINE_CSV_MISSING.md  EPISODE_20251114_FIXES_APPLIED.md  EPISODE_20251114_TIMELINE_CSV_ISSUE.md  FIX_COMPLETION_DETECTION.md  FIX_PLUS2_DISPLAY_ISSUE.md  FRONTEND_STATE_UPDATE_MONITORING.md  GOVERNANCE_STEP1-8_HISTORY.md  GRID_PROGRESS_DEBUG_ANALYSIS.md  GRID_PROGRESS_FIX_SUMMARY.md  (+51 more)
docs/audit-reports/: PHASE4_P2_TYPECLEANUP_INVENTORY.json  PHASE5_S3_DEEP_SCAN_REPORT.json  UNUSED_FILES_AND_FOLDERS_REPORT.md  backend_api.json  plugin_audit.json  render_queue_audit.json  upload_plan.json  upload_queue_audit.json
docs/phase-reports/: DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  DOCUMENTATION_SYNC_SUMMARY.md  PHASE4_P2_AUDIT_REPORT.md  PHASE4_P2_FINAL_AUDIT_REPORT.md  PHASE5_CLEANUP_STATUS.md  PHASE5_S4_COMPLETION_REPORT.md  PHASE5_S5_COMPLETION_SUMMARY.md  PHASE5_S5_TECH_DEBT_REPORT.md  PHASE5_S6_API_CONTRACT_ANALYSIS.md  (+3 more)
kat_rec_web/: .dockerignore  .gitignore  README.md  docker-compose.yml
mcpos/: .cursorrules  README_CLI.md  config.py  models.py
mcpos/cli/: main.py
scripts/: OneClick_4K.command  README.md  analyze_project_structure.py  audit_project_consistency.py  batch_produce_month.py  batch_upload_from_date.py  build_app.sh  check_api_status.py  check_batch_progress.py  check_dry.sh  check_gui_bindings.sh  check_status.sh  check_youtube_api.py  compare_archived_titles_ai.py  create_app.sh  create_cleanup_plan.py  create_icon_from_png.sh  debug_run_sg_vo.py  dev.sh  doc_lint.sh  entropy_report.sh  execute_cleanup.sh  fix_app_bundle.sh  fix_app_for_dock.sh  fix_doc_links.py  generate_docs_toc.py  image_asset_analyze.py  init_env.py  install_app.sh  kat_cli.py  kat_terminal.py  kat_terminal_menu_refactor.py  mcpos_manifest_sync.py  mcpos_run.py  mrrc_cycle.py  oneclick_4k.sh  organize_output_files.py  package.sh  plan_month_covers_titles.py  pre_package_cleanup.sh  (+36 more)
src/: __init__.py  configuration.py  creation_utils.py  main.py
tests/: __init__.py  conftest.py  helpers.py  test_configuration.py  test_consistency.py  test_creation_utils.py  test_ducking.py  test_main.py  test_mixtape_flow.py  test_render.py  test_scheduler.py  test_sg_vo_pipeline.py  test_state_detection_vo.py  test_title_generation.py  test_uploader.py  test_vo_resolver.py  test_vo_timeline.py
tools/: ffmpeg_bench.py
(+314 files in other folders)
