[package]
name = "kat-rec-control"
version = "1.0.0"
description = "Kat Rec Control Center Desktop App"
authors = ["Kat Rec Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-execute", "window-all", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]

